# echoes

./: .gitignore  CMakeLists.txt  LICENSE  OTA_SETUP_GUIDE.md  OTA_SETUP_GUIDE.md~  README.md  build.sh  firmware_server.py  main.c  ota.c  partitions.csv  prep.sh  sdkconfig.defaults  startup.h
birdcalls/: checkfree.py  convert.sh  doall.sh  playall.py  playaudio.py
doc/: 00-Notes.md  00-components.md  01-resources.md  02-pinconnections.md  03-cheatsheet.md  04-notes.md  05-birds.md  BOM.md  components.md  resources.md
docs/: 00-Notes.md  OTA_SETUP_GUIDE.md  README_STARTUP_REPORTING.md  STARTUP_REFERENCE.md  VU_METER_CONFIG.md
main/: CMakeLists.txt  Kconfig.projbuild  echoes.c  echoes.h  espnow_mesh.c  espnow_mesh.h  main.c  markov.c  markov.h  ota.c  ota.h  remote_config.c  remote_config.h  startup.c  startup.h  synthesis.c  synthesis.h
scripts/: setup-idf.sh
scripts/config_server/: echoes-config.service  install.sh  server.py
scripts/firmware_server/: SYSTEMD_SERVICE_GUIDE.md  echoes-firmware.service  firmware_server.py  install-service.sh  install.sh  requirements.txt  uninstall-service.sh
scripts/server/: echoes-server.py  echoes-server.service  install.sh  nodes (1).csv
scripts/sniffer/: CMakeLists.txt  Kconfig.projbuild  README.md  sdkconfig  sdkconfig.defaults  sniffer_monitor.py
scripts/sniffer/main/: CMakeLists.txt  sniffer_main.c
scripts/startup_server/: echoes-startup-server.service  install_server.sh  requirements.txt  startup_server.py  test_server.py
scripts/systemd/: SYSTEMD_SERVICE_GUIDE.md
src/prototype/: whistle.py  whistle2.py
